--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
                 <a href="login.html">
                     Log In
                 </a>
+                <a href="create.html">
+                    Create Post
+                </a>
                 <a href="index.html">
                     Main Page
                 </a>
@@ -40,7 +43,12 @@
         <div id="blogPostContainer" class="display_flex justify-content-center">
 
         </div>
-    </main>
+        <div id="postPage">
 
+        </div>
+        <div id="editPage">
+
+        </div>
+    </main>
 </body>
 </html>
