--- a/register.html
+++ b/register.html
@@ -22,6 +22,9 @@
                     <a href="login.html">
                         Log In
                     </a>
+                    <a href="create.html">
+                        Create Post
+                    </a>
                     <a href="index.html">
                         Main Page
                     </a>
