--- a/create.html
+++ b/create.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Blog Main Login</title>
+    <title>Blog Main Create</title>
     <meta charset="utf-8">
-    <script type="text/javascript" defer src="js/login.js"></script>
+    <script type="text/javascript" defer src="js/create.js"></script>
     <link rel="stylesheet" type="text/css" href="css/blogMain.css">
     <script src="https://kit.fontawesome.com/42762d49f1.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -33,19 +33,22 @@
     </nav>
     <main>
         <div class="display_flex justify-content-center align-items-center flex-column">
-            <div class="fontSize30 fontWeightBold textAlignCenter marginTop50">
-                Log In
+            <div class="fontSize26 fontWeightBold textAlignCenter marginTop50">
+                Complete the form to create blog. Important! You must log in to create blog!
             </div>
             <div class="flex-column justify-content-center align-items-center display_flex">
                 <div class="marginTop10">
-                    <input type="text" placeholder="Enter your name" class="inputBox"  minlength="5" required>
+                    <input type="text" placeholder="Enter title" class="inputRegisterBox"  required>
                 </div>
                 <div class="marginTop10">
-                    <input type="password" placeholder="Enter your password" class="inputBox" required>
+                    <input type="text" placeholder="Enter image url" class="inputRegisterBox" required>
+                </div>
+                <div class="marginTop10 textArea">
+                    <textarea placeholder="Enter description" rows="4" cols="50" class="textArea"></textarea>
                 </div>
                 <div class="marginTop10">
-                    <button id="loginButton" class="logRegButton">
-                        Log in
+                    <button id="createPostButton" class="logRegButton">
+                        Create Post
                     </button>
                 </div>
             </div>
