almost final final

--- a/index.html
+++ b/index.html
@@ -40,7 +40,16 @@
                 Developing Inspiration
             </div>
         </div>
-        <div id="blogPostContainer" class="display_flex justify-content-center">
+        <div id="postsToolbar">
+            Sort posts by date:
+            <button class="sortButton" id="newestPosts">
+                From newest
+            </button>
+            <button class="sortButton" id="oldestPosts">
+                From oldest
+            </button>
+        </div>
+        <div id="blogPostContainer" class="display_flex">
 
         </div>
         <div id="postPage">
@@ -48,6 +57,14 @@
         </div>
         <div id="editPage">
 
+        </div>
+        <div class="display_flex justify-content-center flex-column align-items-center">
+            <div id="userBox">
+
+            </div>
+            <div id="userPosts" class="wrap display_flex justify-content-center">
+
+            </div>
         </div>
     </main>
 </body>
